# AirGapAICoder

./: .dockerignore  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  Containerfile  LICENSE  PROJECT_STANDARDS.md  README.md  docker-compose.air-gap.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: airgap-ai-coder-overview.md  architecture-updates-2025-10-19.md
config/cline/: settings-template.json
config/modelfiles/: Modelfile-deepseek32b  Modelfile-qwen14b  Modelfile-qwen32b
docs/: AIRAI-CLINE-INTEGRATION.md  ARCHITECTURE.md  CLI-USAGE.md  CLIENT-USAGE.md  CONTAINER-DEPLOYMENT.md  DOCKER-QUICKSTART.md  INSTALLATION.md  OPERATIONS.md  QUICKSTART.md  REQUIREMENTS.md  SERVER-SETUP.md
scripts/cli/: ollama-cli.sh
scripts/container/: build.sh  deploy-airgap.sh  entrypoint.sh  run.sh
scripts/docker/: build-all-platforms.sh  export-airgap.sh  test-container.sh
scripts/installation/: install-airai-windows.ps1  install-airai.sh  uninstall-airai-windows.ps1  uninstall-airai.sh
scripts/installation/server/: install-macos.sh
scripts/preparation/: pull-all.sh
scripts/services/: monitor.sh
src/airai/: README.md  __init__.py  __main__.py  cli.py
src/airai/api/: __init__.py  client.py
src/airai/commands/: __init__.py  chat_cmd.py  code.py  health.py  models_cmd.py  server.py
src/airai/utils/: __init__.py
