[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airai"
version = "1.1.0"
description = "AirAI - Enterprise air-gapped AI coding assistant CLI"
authors = [
    {name = "Chad Rosenbohm", email = "chad@fuzemobi.com"},
]
maintainers = [
    {name = "Fuzemobi, LLC", email = "support@fuzemobi.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["ai", "coding-assistant", "air-gap", "ollama", "cli", "gpu"]

dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "tabulate>=0.9.0",
    "psutil>=5.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "types-requests",
    "types-PyYAML",
]
container = [
    "podman-py>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/fuzemobi/AirGapAICoder"
Documentation = "https://github.com/fuzemobi/AirGapAICoder/tree/main/docs"
Repository = "https://github.com/fuzemobi/AirGapAICoder"
Issues = "https://github.com/fuzemobi/AirGapAICoder/issues"

[project.scripts]
airai = "airai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["airai*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=airai --cov-report=term-missing"
